ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    networking.gke.io/managed-certificates: "wisecow-cert"
spec:
  ingressClassName: "gce"
  rules:
    - host: "wise-cow.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 80
  tls:
    - hosts:
        - "wise-cow.com"
